Changes with Apache 1.3.20

  *) Changed the initial screen handling for NetWare so that the -s 
     parameter will properly destroy the Apache console screen and switch 
     to the system console screen.  Also removed the call to clrscr() for 
     NetWare so that any warning messages produced during startup are visible.
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Integrate support for the Cygwin 1.x platform (a POSIX emulation layer
     for Win32 systems, see http://www.cygwin.com)
     [Stipe Tolj <tolj@wapme-systems.de>]

  *) Changes to 'ab'; fixed int overrun's, added statistics, output in
     csv/gnuplot format, rudimentary ssl support and various other tweaks
     to make results more true to what is measured. The upshot of this it
     turns out that 'ab' has often underreported the true performance of
     apache. Often by a order of magnitude :-) See talk/paper of Sander 
     Temme <sctemme@covalent.net> at April ApacheCon 2001 for details.
     [Dirk-Willem van Gulik]

  *) Hooked calls to opendir() and readdir() so that we could add '.' and
     '..' to the entry list.  By default NetWare does not return these
     entries which caused mod_autoindex not to display the parent directory
     entry. [Brad Nicholes <BNICHOLES@novell.com>]

  *) Solved a very serious threading problem with WinNT/2K Services.  The
     moment master_main told that the shutdown was complete, the parent
     control thread exited Apache, leaving mod_jserv's Java process running
     and alternately invoking mod_perl's cleanups from the correct thread
     or the service control thread. [William Rowe]

  *) Populate the Win32 HKLM\System\CurrentControlSet\Services\[apachesvc]
     key with the Description value of the running server across all Win32
     platforms, including NT, ME and 9x.  This value is the server_version
     string including loaded modules.  [William Rowe]

  *) Fix ndbm.h include problems with various Linux distributions and 